Rich D: added labels to the input fields, set input type for each field to numeric, put all string literals in the layout into the strings.xml file and removed an unused string from strings.xml

--- a/BoardFeetCalculator/res/values/strings.xml
+++ b/BoardFeetCalculator/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
 
     <string name="app_name">BoardFeetCalculator</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_calculator">Board Feet Calculator</string>
+    <string name="label_height">Tree Height</string>
+    <string name="label_circumference">Tree Circumference</string>
+    <string name="label_superfluous">TextView</string>
 
 </resources>
