--- a/BoardFeetCalculator/res/values/strings.xml
+++ b/BoardFeetCalculator/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="label_circumference">Tree Circumference</string>
     <string name="label_superfluous">TextView</string>
     <string name="photo_pref">Save with Photo</string>
+    <string name="preferences">Preferences</string>
 </resources>
