Rich D: location hacked in

--- a/BoardFeetCalculator/res/values/strings.xml
+++ b/BoardFeetCalculator/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="label_height">Tree Height</string>
     <string name="label_circumference">Tree Circumference</string>
     <string name="label_superfluous">TextView</string>
+    <string name="label_latitude">Latitude</string>
+    <string name="label_longitude">Longitude</string>
 </resources>
