Save button changes

--- a/BoardFeetCalculator/res/values/strings.xml
+++ b/BoardFeetCalculator/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="label_height">Tree Height</string>
     <string name="label_circumference">Tree Circumference</string>
     <string name="label_superfluous">TextView</string>
+	<string name="button_save">Save</string>
 </resources>
